# puxadinho

./: .editorconfig  .envrc  .gitignore  .ruff.toml  README.md  Taskfile.yml  devbox.json  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json
.devcontainer/hooks/: post_attach.sh
container/devcontainer/: Dockerfile
src/: cli.py
src/core/: __init__.py  app.py  command.py  context.py  result.py  types.py
src/teeny/: app.py  types.py  view.py
src/teenycli/: command.py  context.py  exceptions.py  result.py
tests/: conftest.py  test_app.py  test_echoapp.py
tests/testapps/echo/: echoapp.py
